--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@ defer
     <div id="popup">
         <div class="popup-header">
             <img src="images/logo.jpg" alt="Uber logo">
-            <span class="font-bold">adorofarm</span>
+            <span class="font-bold">carna.lotus</span>
             <img src="https://img.icons8.com/?size=512&amp;id=2sZ0sdlG9kWP&amp;format=png" alt="Verified icon"
                 class="verified-icon">
             <span class="ad-label">Publicidade</span>
         </div>
-        <p class="mb-4">Desconto em toda loja com 80% OFF.</p>
+        <p class="mb-4">Desconto em cada ingresso com 80% OFF.</p>
         <p class="text-sm text-gray-600">Aproveite nossa promoção especial de BLACK FRIDAY e renove seus produtos de autocuidado na Farm Rio com descontos incríveis!</p>
 
         <a href="https://www.farmriio.store/"
@@ -279,7 +279,7 @@ defer
         <header class="fixed-header flex items-center justify-between bg-white">
             <i class="fas fa-arrow-left text-black text-lg"></i>
             <h1 class="text-black text-base font-semibold flex items-center">
-                adorofarm
+                carna.lotus
 
 
                 <span class="verified-icon">
@@ -303,11 +303,11 @@ defer
                                 <div class="text-xs">publicações</div>
                             </div>
                             <div>
-                                <div class="font-bold">2,7 mi</div>
+                                <div class="font-bold">2.645</div>
                                 <div class="text-xs">seguidores</div>
                             </div>
                             <div>
-                                <div class="font-bold">250</div>
+                                <div class="font-bold">6</div>
                                 <div class="text-xs">seguindo</div>
                             </div>
                         </div>
