--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ defer
                     <div class="flex-1 ml-8">
                         <div class="flex justify-between text-center">
                             <div>
-                                <div class="font-bold">10.346</div>
+                                <div class="font-bold">57</div>
                                 <div class="text-xs">publicações</div>
                             </div>
                             <div>
@@ -314,16 +314,8 @@ defer
                     </div>
                 </div>
                 <div class="mt-4">
-                    <h2 class="font-bold">FARM Rio</h2>
-                    <p class="text-sm">plantando 1000 árvores por dia, todos os dias 🌳
-
-                        empresa B certificada 🌎
-
-                        100% carbono neutro 🍃
-
-                        desenhado no rio 🇧🇷
-                        
-                        pelo mundo @farmrio ✈️
+                    <h2 class="font-bold">Carna Lotús</h2>
+                    <p class="text-sm">O melhor canaval da sua vida 🎊
                     </p>
                     <font color="#1977F2">
                         <p class="text-sm custom-blue-text" style="color: #000000;"></p>
