--- a/index.html
+++ b/index.html
@@ -357,35 +357,35 @@ defer
                     <div class="highlight-container">
                         <img alt="Warning sign for alert" class="highlight-image" src="images/destaque1.jpg">
                     </div>
-                    <span class="text-xs mt-1">Green Friday</span>
+                    <span class="text-xs mt-1">2024</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="highlight-container">
                         <img id="ajudeRSImage" alt="Help Rio Grande do Sul campaign" class="highlight-image"
                             src="images/destaque2.jpg">
                     </div>
-                    <span class="text-xs mt-1">original FARM</span>
+                    <span class="text-xs mt-1">2023</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="highlight-container">
                         <img id="ajudeRSImage" alt="Help Rio Grande do Sul campaign" class="highlight-image"
                             src="images/destaque3.jpg">
                     </div>
-                    <span class="text-xs mt-1">tá na vitrine</span>
+                    <span class="text-xs mt-1">2022</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="highlight-container">
                         <img id="ajudeRSImage" alt="Help Rio Grande do Sul campaign" class="highlight-image"
                             src="images/destaque4.jpg">
                     </div>
-                    <span class="text-xs mt-1">Apé</span>
+                    <span class="text-xs mt-1">2021</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="highlight-container">
                         <img id="ajudeRSImage" alt="Help Rio Grande do Sul campaign" class="highlight-image"
                             src="images/destaque5.jpg">
                     </div>
-                    <span class="text-xs mt-1">alerta golpe</span>
+                    <span class="text-xs mt-1">2020</span>
                 </div>
                 
             </div>
