--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ defer
                 class="verified-icon">
             <span class="ad-label">Publicidade</span>
         </div>
-        <p class="mb-4">Desconto em cada ingresso com 80% OFF.</p>
-        <p class="text-sm text-gray-600">Aproveite nossa promoção especial de BLACK FRIDAY e renove seus produtos de autocuidado na Farm Rio com descontos incríveis!</p>
+        <p class="mb-4">Desconto em cada ingresso com 30% OFF.</p>
+        <p class="text-sm text-gray-600">Aproveite nossa promoção especial com descontos incríveis!</p>
 
         <a href="https://www.farmriio.store/"
             class="bg-blue-500 text-white px-4 py-2 rounded block text-center">Ir para o site</a>
