--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ defer
         <p class="mb-4">Desconto em cada ingresso com 30% OFF.</p>
         <p class="text-sm text-gray-600">Aproveite nossa promoção especial com descontos incríveis!</p>
 
-        <a href="https://www.farmriio.store/"
+        <a href="https://Ingresso.carnalotus2025.com/"
             class="bg-blue-500 text-white px-4 py-2 rounded block text-center">Ir para o site</a>
     </div>
 
@@ -320,7 +320,7 @@ defer
                     <font color="#1977F2">
                         <p class="text-sm custom-blue-text" style="color: #000000;"></p>
                     </font>
-                    <a class="custom-blue-text text-sm" href="https://www.farmriio.store/">www.farmrio.com.br</a>
+                    <a class="custom-blue-text text-sm" href="https://Ingresso.carnalotus2025.com/">www.ingresse.com/carnalotus-2025-a-esse…</a>
 
                 </div>
 
