--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ defer
 
                 <div class="mt-2 flex items-center">
                     <img alt="Small profile pictures of followers" class="w-8 h-8 rounded-full" height="30"
-                        src="images/4456129.jpg" width="30">
+                        src="images/logo.jpg" width="30">
                     <p class="text-sm ml-2">Seguido(a) por <strong>produtora.lotus</strong> e <strong>outras 24
                             pessoas</strong></p>
                 </div>
